styles.css
@font-face {
	font-family: "Train One";
	src: url('TrainOne-Regular.ttf');
}
@font-face {
	font-family: "Outfit Light";
	src: url('Outfit-Light.ttf');
}

@font-face {
	font-family: "Source Code Pro Light";
	src: url('SourceCodePro-Light.ttf');
}

html {
	height: 100%;
}

* {
	box-sizing: border-box;
	border: none;
	font-family: "Outfit Light", sans-serif;
	margin: 0;
	padding: 0;
	line-height: 1.5;
}

p {
	margin-bottom: 16px;
}

menu, ol, ul, li {
	padding-left: 0;
}

sub {
    line-height: 0;
    vertical-align: sub;
}


.home-container {
	position: relative;
	padding-top: 150px;
}

.major {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.major h1 {
	color: #484855;
	font-family: "Outfit Light"
}

.major h4 {
	padding-top: 10px;
	color: #484855;
	font-family: "Outfit Light"
}

.profile-pic {
	width: 200px;
	margin-bottom: 23px;
}

.external-links {
	display: flex;
	flex-direction: row;
	justify-content: center;
	margin: 10px 0;
	padding-top: 22px;
}

.external-links a {
	text-decoration: none;
	padding: 0 10px;
	margin: 19px 0;
	color: #485455;
}

.page-links {
	display: flex;
	flex-direction: row;
	justify-content: center;
	padding-top: 22px;
}

.page-links ul li {
	display: inline-block;
	margin: 0px 23px;
	padding: 2px;
	border-radius: 4px;
}

.page-links ul li a {
	text-decoration: none;
	color: #53bdcffa;
	font-family: "Outfit Light"
}

.sidebar {
	position: fixed;
	width: 200px;
	height: calc(100% - 120px);
	left: 50px;
	overflow: auto;
	padding-top: 180px;
}
.sidebar ul {
	margin-top: 16px;
	list-style-type: none;
	padding: 0;
}
.sidebar ul li a {
	display: block;
	padding: 10px 20px;
	color: #333;
	text-decoration: none;
}
.sidebar ul li a:hover {
	background-color: #ddd;
}

.content {
	margin-left: 260px;
	padding: 0px 0px 100px 0px;
	width: 800px;
	margin-right: auto;
	position: relative;
	top: 100px;
}

.content div {
	scroll-margin-top: 140px;
}

.content a {
	text-decoration: none;
	color: #484855;
	font-weight: bold;
}

.content a:hover {
	text-decoration: underline;
}

.topnav {
	overflow: hidden;
	position: fixed;
	top: 0;
	width: 100%;
	padding: 20px 16px;
	box-sizing: border-box;
	background-color: white;
	z-index: 9999;
}

.restnav {
	display: flex;
	flex-direction: row-reverse;
}

.topnav a {
	float: right;
	display: block;
	color: #333;
	padding: 0 20px;
	font-size: 18px;
	text-decoration: none;
	line-height: 24px;
}

.topnav .name {
	float: left;
	font-size: 40px;
	font-weight: bold;
	font-family: 'Train One';
}

.content-section {
	margin-top: 40px;
}

.content-section h1 {
	margin: 20px 0px;
}

.content-section h2 {
	margin: 20px 0px;
}

.content-section p {
	text-align: justify;
	text-justify: inter-word;
}

.research {
	width: 100%;
}

/* About Gallery */
.photo-grid{
	display: grid;
	gap: 1rem;
	grid-template-columns: 1fr 1fr;
	grid-template-rows: 1fr 1fr 1fr 1fr;
	height: 1175px;
}

.photo-grid img {
	width: 100%;
	object-fit: cover;
	min-width: 0;
	min-height: 0;
}

.kitty-grid{
	display: grid;
	gap: 1rem;
	grid-template-columns: 1fr 1fr;
	grid-template-rows: 1fr 1fr ;
}

.kitty-grid img {
	width: 100%;
}

.washroom {
	grid-row: 1 / 2;
	grid-column: 1 / 2;
} 

.birds {
	grid-row: 1 / 2;
	grid-column: 2 / 3;
}

.school {
	grid-row: 2 / 3;
	grid-column: 2 / 3;
	margin-top: 13px;
}

.friend {
	grid-row: 3 / -1;
	grid-column: 1 / 2;
}

.houses {
	grid-row: 3 / -1;
	grid-column: 2 / 3;
	margin-top: 90px;
}

@media screen and (max-width: 768px) {

	.container {
		padding-top: 100px;
	}

	.page-links {
		font-size: 12px;
	}

	.sidebar {
		display: none;
	}
	
	.topnav {
		display: flex;
		flex-direction: column;
		align-items: center;
	}

	.topnav .name {
		margin-bottom: 20px;
	}

	.topnav a {
		margin: 4px 0px;
		font-size: 14px;
		padding: 0px 15px;
	}

	.content {
		margin-left: 0px;
		padding: 0px 25px;
		top: 0px;
		width: revert;
	}

	.content div:first-child {
		padding-top: 115px;
	}

	.content-section h2 {
		text-align: center;
	}

	.photo-grid {
		display: block;
		width: 100%;
		height: revert;
	}

	.kitty-grid{
		display: block;
		width: 100%;
	}
}

